# katas

./: README.md
clojure/: README.md  project.clj
clojure/src/fizzbuzz/: core.clj
clojure/test/fizzbuzz/: core_test.clj
elixir/: README.md  mix.exs
elixir/lib/: bank_ocr.ex  fizzbuzz.ex
elixir/test/: bank_ocr_test.exs  fizzbuzz_test.exs
elm/: README.md  elm.json
elm/fizzbuzz/src/: Main.elm
elm/fizzbuzz/tests/: MainTests.elm
elm/src/: Fizzbuzz.elm
elm/tests/: FizzbuzzTests.elm
golang/: fizzbuzz.go  fizzbuzz_test.go
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/com/goblindegook/fizzbuzz/: Fizzbuzz.kt
kotlin/src/main/kotlin/com/goblindegook/gameoflife/: CellState.kt  GameOfLife.kt  World.kt
kotlin/src/test/kotlin/com/goblindegook/fizzbuzz/: FizzbuzzTest.kt
python/: .gitignore  Makefile  README.md  fizzbuzz.py  pyproject.toml  requirements.txt  setup.py  test_fizzbuzz.py
python/katas/: chop.py  fizzbuzz.py
python/tests/: test_chop.py  test_fizzbuzz.py
racket/: README.md  fizzbuzz-test.rkt  fizzbuzz.rkt
reasonml/: README.md  package.json
reasonml/__tests__/: fizzbuzz_test.re
reasonml/src/: fizzbuzz.re
rust/: Cargo.toml  README.md
rust/src/: fizzbuzz.rs  lib.rs  roman.rs
rust/tests/: fizzbuzz_test.rs  roman_test.rs
typescript/: .eslintrc  README.md  package.json  tsconfig.json  tslint.json
typescript/src/fizzbuzz/: fizzbuzz.test.ts  fizzbuzz.ts
typescript/src/kata/: kata.test.ts  kata.ts
typescript/src/roman-numerals/: roman-numerals.test.ts  roman-numerals.ts
(+2 files in other folders)
