[tool.poetry]
name = "katas"
version = "0.1.0"
description = ""
authors = ["Luis Rodrigues <luis.rodrigues@springernature.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
pytest = "^6.2.4"
pytest-watch = "^4.2.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
